--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ notebook = [
     "nbconvert>=7.14.2",
     "papermill>=2.5.0",
     "seaborn>=0.13.2",
+    "toml>=0.10.2",
 ]
 [tool.pdm]
 distribution = false
