--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ authors = [
 dependencies = [
     "pandas>=2.2.0",
     "pyarrow>=15.0.0",
+    "scipy>=1.12.0",
+    "scikit-learn>=1.4.0",
+    "ckwrap>=1.2.0",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
